--- a/0x1A-application_server/gunicorn.service
+++ b/0x1A-application_server/gunicorn.service
@@ -9,8 +9,8 @@ User=ubuntu
 WorkingDirectory=/home/ubuntu/AirBnB_clone_v4
 ExecStart=gunicorn --workers 3 --bind 0.0.0.0:5003 web_dynamic.2-hbnb:app --error-logfile /tmp/airbnb-error.log --access-logfile /tmp/airbnb-access.log
 Restart=always
-StandardOutput=append:/var/log/gunicorn/access.log
-StandardError=append:/var/log/gunicorn/error.log
+StandardOutput=append:/tmp/airbnb-access.log
+StandardError=append:/tmp/airbnb-error.log
 SyslogIdentifier=gunicorn
 
 [Install]
