--- a/0x1A-application_server/gunicorn.service
+++ b/0x1A-application_server/gunicorn.service
@@ -7,7 +7,7 @@ After=network.target
 # Run the service as the ubuntu user and group defined earlier
 User=ubuntu
 WorkingDirectory=/home/ubuntu/AirBnB_clone_v4
-ExecStart=gunicorn --workers 3 --bind 0.0.0.0:5003 web_dynamic.2-hbnb:app --error-logfile /tmp/airbnb-error.log --access-logfile /tmp/airbnb-access.log
+ExecStart=/home/ubuntu/.local/bin/gunicorn --workers 3 --bind 0.0.0.0:5003 web_dynamic.2-hbnb:app --error-logfile /tmp/airbnb-error.log --access-logfile /tmp/airbnb-access.log
 Restart=always
 StandardOutput=append:/tmp/airbnb-access.log
 StandardError=append:/tmp/airbnb-error.log
